test/codegen/c/multi_char.c
/* Generated by re2c */
// re2c $INPUT -o $OUTPUT -i --vectorize-linear
#include <assert.h>
#include <string.h>

#define YYCTYPE char

// The default API needs neither YYPEEKN nor YYSKIPN. Without YYFILL, the multi-character reads are
// guarded by YYLIMIT.
static int lex(const char *s)
{
    const char *YYCURSOR = s, *YYLIMIT = s + strlen(s), *YYMARKER;
    
{
	YYCTYPE yych;
	yych = *YYCURSOR;
	switch (yych) {
		case 'D': goto yy3;
		case 'I': goto yy4;
		case 'S': goto yy5;
		case 'U': goto yy6;
		default: goto yy1;
	}
yy1:
	++YYCURSOR;
yy2:
	{ return -1; }
yy3:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'E': goto yy7;
		default: goto yy2;
	}
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'N': goto yy9;
		default: goto yy2;
	}
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'E': goto yy10;
		default: goto yy2;
	}
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'P': goto yy11;
		default: goto yy2;
	}
yy7:
	yych = *++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) >= 2) {
		if (((unsigned long long)(unsigned char)YYCURSOR[0] | (unsigned long long)(unsigned char)YYCURSOR[1] << 8 * 1) == 0x454c) {
			YYCURSOR += 1;
			goto yy16;
		}
	}
	switch (yych) {
		case 'L': goto yy12;
		default: goto yy8;
	}
yy8:
	YYCURSOR = YYMARKER;
	goto yy2;
yy9:
	yych = *++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) >= 2) {
		if (((unsigned long long)(unsigned char)YYCURSOR[0] | (unsigned long long)(unsigned char)YYCURSOR[1] << 8 * 1) == 0x4553) {
			YYCURSOR += 1;
			goto yy17;
		}
	}
	switch (yych) {
		case 'S': goto yy13;
		default: goto yy8;
	}
yy10:
	yych = *++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) >= 2) {
		if (((unsigned long long)(unsigned char)YYCURSOR[0] | (unsigned long long)(unsigned char)YYCURSOR[1] << 8 * 1) == 0x454c) {
			YYCURSOR += 1;
			goto yy18;
		}
	}
	switch (yych) {
		case 'L': goto yy14;
		default: goto yy8;
	}
yy11:
	yych = *++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) >= 2) {
		if (((unsigned long long)(unsigned char)YYCURSOR[0] | (unsigned long long)(unsigned char)YYCURSOR[1] << 8 * 1) == 0x4144) {
			YYCURSOR += 1;
			goto yy19;
		}
	}
	switch (yych) {
		case 'D': goto yy15;
		default: goto yy8;
	}
yy12:
	yych = *++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) >= 2) {
		if (((unsigned long long)(unsigned char)YYCURSOR[0] | (unsigned long long)(unsigned char)YYCURSOR[1] << 8 * 1) == 0x5445) {
			YYCURSOR += 1;
			goto yy20;
		}
	}
	switch (yych) {
		case 'E': goto yy16;
		default: goto yy8;
	}
yy13:
	yych = *++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) >= 2) {
		if (((unsigned long long)(unsigned char)YYCURSOR[0] | (unsigned long long)(unsigned char)YYCURSOR[1] << 8 * 1) == 0x5245) {
			YYCURSOR += 1;
			goto yy21;
		}
	}
	switch (yych) {
		case 'E': goto yy17;
		default: goto yy8;
	}
yy14:
	yych = *++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) >= 2) {
		if (((unsigned long long)(unsigned char)YYCURSOR[0] | (unsigned long long)(unsigned char)YYCURSOR[1] << 8 * 1) == 0x4345) {
			YYCURSOR += 1;
			goto yy22;
		}
	}
	switch (yych) {
		case 'E': goto yy18;
		default: goto yy8;
	}
yy15:
	yych = *++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) >= 2) {
		if (((unsigned long long)(unsigned char)YYCURSOR[0] | (unsigned long long)(unsigned char)YYCURSOR[1] << 8 * 1) == 0x5441) {
			YYCURSOR += 1;
			goto yy23;
		}
	}
	switch (yych) {
		case 'A': goto yy19;
		default: goto yy8;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'T': goto yy20;
		default: goto yy8;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'R': goto yy21;
		default: goto yy8;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'C': goto yy22;
		default: goto yy8;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'T': goto yy23;
		default: goto yy8;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E': goto yy24;
		default: goto yy8;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'T': goto yy25;
		default: goto yy8;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'T': goto yy26;
		default: goto yy8;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E': goto yy27;
		default: goto yy8;
	}
yy24:
	++YYCURSOR;
	{ return 4; }
yy25:
	++YYCURSOR;
	{ return 2; }
yy26:
	++YYCURSOR;
	{ return 1; }
yy27:
	++YYCURSOR;
	{ return 3; }
}

}

int main()
{
    assert(lex("SELECT") == 1);
    assert(lex("INSERT") == 2);
    assert(lex("UPDATE") == 3);
    assert(lex("DELETE") == 4);
    assert(lex("UNKNOWN") == -1);
    assert(lex("DE") == -1);
    assert(lex("SE") == -1);
    assert(lex("D") == -1);
    assert(lex("") == -1);
    return 0;
}
